<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Studentersamfundet</string>
    
    
    <string name="event_link_button">Kjøp billett</string>
    <string name="error_noconnection_firstart">Ingen nettilkobling. Du må være tilkoblet nettet for å se programmet.</string>
    <string name="error_noconnection_noupdate">Ingen nettilkobling. Programmet er ikke oppdatert.</string>
    <string name="join_us">Studentene i Oslo har sitt naturlige tilholdssted på Det Norske Studentersamfund, i hyggelige lokaler på Chateau Neuf øverst på Majorstuen. Her er det åpent alle dager unntatt søndag, og enten man ønsker en tur i baren, på kafé, på debatt, på konsert, teater eller kino, har man muligheten på Det Norske Studentersamfund.\n\nSiden 1813 har Det Norske Studentersamfund samlet studenter til kulturell, politisk, faglig og ikke minst sosial aktivitet. Som medlem får du rabatter på alle arrangementer og servering i baren, informasjon om alt som skjer på huset, og du kan være med på å bestemme ved å bruke stemmeretten under medlemsmøter og generalforsamlinger. Medlemskap koster deg bare 200 kroner i året og kan kjøpes ved følge denne lenken: studentersamfundet.no/bli-medlem\n\nVil du bli med på å skape all morroa?\n\nBooke band, tappe øl eller lede politiske debatter? Du vil garantert finne noe av interesse hvis du har lyst til å bli aktiv i en av de mange foreningene som driver DNS. Her lærer vi alt du ikke hører om på forelesningene. Praktisk erfaring og utfordringer som kan være gull verdt når den voksne verden en gang banker på døren.\n\nHva vil du huske fra studietiden? Lesesalen? Pensum? Eksamensnerver? Det er nå du har sjansen til å skape minnene som varer hele livet. Venner, fester, gallamiddager og fest så lenge du orker.\n\nTa kontakt på:\nblimed@studentersamfundet.no\n&#8230;eller gå inn på studentersamfundet.no/bli-aktiv for mer informasjon!\n\n</string>
    <string name="menu_refresh">Oppdater</string>
    <string name="menu_categories">Kategorier</string>
    <string name="choose_category">Velg kategori</string>
    <string name="error_loading">Vent til oppdateringen fullfører</string><string name="main_menu_program">PROGRAM</string>
    <string name="main_menu_opening_hours">ÅPNINGSTIDER I DAG</string>
    <string name="main_menu_tickets">KJØP BILLETT</string><string name="main_menu_join">OM DNS</string>
    <string name="main_menu_news">AKTUELT</string>
    <string name="calendar_not_found">Kunne ikke finne kalender-app. Avbryter.</string>
    <string name="chateau_neuf">Chateau Neuf</string>
    <string name="BC">BokCaféen</string>
    <string name="GB">Glassbaren</string>
    <string name="billettluka">Billettluka</string>
    <string name="event_image">Event-bilde</string>
    <string name="empty"/>
    <string name="no_events">Vi har ingen planlagte arrangementer akkurat nå. Prøv igjen senere. </string>
    <string name="no_ticket_events">Vi har ingen billetter liggende ute på Billettservice. Alle billetter kan kjøpes i billettluka.</string>
</resources>
