<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:id="@+id/main_menu_hours"
   	android:layout_marginBottom="20dp"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
    
    <!-- OPENING HOURS: -->
    <TextView android:id="@+id/main_menu_hours_header"
        style="@style/OpeningHoursHeaderText"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/main_menu_opening_hours" />
    
    <LinearLayout android:id="@+id/main_menu_hours_neuf_header"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        
        <TextView 
            style="@style/OpeningHoursText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:text="@string/chateau_neuf" />
            
        <!-- This is set in Java: -->
        <TextView android:id="@+id/main_menu_hours_neuf"
            style="@style/OpeningHoursText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.5" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/main_menu_hours_bc_header"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        
        <TextView
            style="@style/OpeningHoursText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:text="@string/BC" />
            
        <!-- This is set in Java: -->
        <TextView android:id="@+id/main_menu_hours_bc"
            style="@style/OpeningHoursText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.5" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/main_menu_hours_gb_header"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        
        <TextView
            style="@style/OpeningHoursText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:text="@string/GB" />
            
        <!-- This is set in Java: -->
        <TextView android:id="@+id/main_menu_hours_gb"
            style="@style/OpeningHoursText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.5" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/main_menu_hours_to_header"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        
        <TextView
            style="@style/OpeningHoursText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:text="@string/billettluka" />
            
        <!-- This is set in Java: -->
        <TextView android:id="@+id/main_menu_hours_to"
            style="@style/OpeningHoursText"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="0.5" />
    </LinearLayout>
</LinearLayout>